join request routes slightly changed and added to swagger file
