# dwengo_backend/routes/joinRequest/joinRequestRoutes.ts
@@ -1,32 +1,44 @@
 import {
+  createJoinRequest,
   getJoinRequestsByClass,
   updateJoinRequestStatus,
 } from "../../controllers/joinrequest/joinRequestController";
 import express from "express";
 import { protectTeacher } from "../../middleware/teacherAuthMiddleware";
+import { protectStudent } from "../../middleware/studentAuthMiddleware";
 
 const router = express.Router();
-
-router.use(protectTeacher);
 
 // routes for join requests
 
 /**
- * @route GET /join-request/class/:classId
+ * @route GET /join-request/teacher/class/:classId
  * @description Get all join requests for a class
  * @param classId: number
  * @access Teacher
  */
-router.get("/class/:classId", getJoinRequestsByClass);
+router.get("/teacher/class/:classId", protectTeacher, getJoinRequestsByClass);
 
 /**
- * @route PATCH /join-request/:requestId/class/:classId
+ * @route POST /join-request/student
+ * @description Create a join request to join a class
+ * @body joinCode: string
+ * @access Student
+ */
+router.post("/student", protectStudent, createJoinRequest);
+
+/**
+ * @route PATCH /join-request/teacher/:requestId/class/:classId
  * @description Update the status of a join request
  * @param requestId: number
  * @param classId: number
  * @body action: string {approve, deny}
  * @access Teacher
  */
-router.patch("/:requestId/class/:classId", updateJoinRequestStatus);
+router.patch(
+  "/teacher/:requestId/class/:classId",
+  protectTeacher,
+  updateJoinRequestStatus
+);
 
 export default router;
